--- a/FirstWebsite/Home.css
+++ b/FirstWebsite/Home.css
@@ -17,6 +17,7 @@ p
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 40px;
+    color: #000000;
 }
 /* body styles */
 body
