--- a/FirstWebsite/Home.css
+++ b/FirstWebsite/Home.css
@@ -17,9 +17,9 @@ p
 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 40px;
-    color: #000000;
+    color: #ffffff;
 }
-/* body styles */
+/* body styles */   
 body
 {
     background-image: url();
