--- a/FirstWebsite/Home.css
+++ b/FirstWebsite/Home.css
@@ -1,7 +1,7 @@
 /* Heading style */
 h1
 {
-    text-align: center;
+    text-align: left;
     font-size: 60px;
     background-color: black;
     color: aliceblue;
@@ -11,6 +11,8 @@ h1
 h2
 {
     font-size: 50px;
+    background-color: #fff;
+    text-align: center;
 }
 /* paragraph styles */
 p
@@ -22,13 +24,27 @@ p
 /* body styles */   
 body
 {
-    background-image: url();
+    background-image: url(HomePg.jpg);
 }
-/* about and menu button css */
-menu
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 100px;
-    font-style: italic;
+
+ul.navigation {
+    list-style: none;
+    padding: 0;
     text-align: right;
+}
+ul.navigation li {
+    display: inline;
+    margin-right: 0px; /* Add spacing between links */
+
+}
+ul.navigation li a {
+    text-decoration: none;
+    font-size: 50px;
+    color: #fff; /* Customize link color */
+    background-color: #373737;
+    padding: 5px;
+}
+ul.navigation li a:hover {
+    color: #373737; /* Customize link color */
+    background-color: #fff;
 }
