--- a/FirstWebsite/Home.css
+++ b/FirstWebsite/Home.css
@@ -26,7 +26,7 @@ body
 {
     background-image: url(HomePg.jpg);
 }
-
+/* Menu buttons Css */
 ul.navigation {
     list-style: none;
     padding: 0;
