--- a/FirstWebsite/Home.css
+++ b/FirstWebsite/Home.css
@@ -51,8 +51,13 @@ ul.navigation li a {
     color: #fff; /* Customize link color */
     background-color: #373737;
     padding: 5px;
+    float: left;
 }
 ul.navigation li a:hover {
     color: #373737; /* Customize link color */
     background-color: #fff;
+}
+.logo
+{
+    margin: auto;
 }
