--- a/FirstWebsite/Home.css
+++ b/FirstWebsite/Home.css
@@ -51,13 +51,13 @@ ul.navigation li a {
     color: #fff; /* Customize link color */
     background-color: #373737;
     padding: 5px;
-    float: left;
+    float: right;
 }
 ul.navigation li a:hover {
     color: #373737; /* Customize link color */
     background-color: #fff;
 }
-li a, dropbtn
+li a .dropbtn
 {
     display: inline-block;
     color: white;
@@ -94,11 +94,30 @@ li.dropdown
 {
     background-color: #373737;
 }
-.dropdown:hover ,.dropdown-content
+.dropdown:hover .dropdown-content
 {
     display: block;
 }
 .logo
 {
-    margin: auto;
+    width: 5%;
+}
+ul.footer
+{
+    display: inline-block;
+    list-style: none;
+    padding: 0;
+}
+ul.footer li
+{
+    margin-right: 0px;
+}
+ul.footer li a
+{
+    text-decoration: none;
+    font-size: 20px;
+    color: #fff; /* Customize link color */
+    background-color: #373737;
+    padding: 5px;
+    float: left;
 }
